--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Another Blog
+title: Romantic Coder Blog
 url: "https://zhangxiang2014.github.io/"    # the protocol and hostname of your site, eg. `http://laobubu.github.io`
 baseurl: "" # the prefix of your site uri, eg. `/jekyll-theme-EasyBook` or just one slash `/`
 #timezone: Asia/Beijing
@@ -9,8 +9,8 @@ description: >
 # Your information
 email: 805198265@qq.com
 author: 诗意的猿
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
-profile: One sentence introducing yourself.
+avatar: "http://upload.jianshu.io/users/upload_avatars/1420306/d083fd3309f2.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
+profile: 这里有片麦田，我会在这里守望.
 #twitter_username: twitter_username
 #github_username:  github_username
 
