--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: 诗意的猿
 avatar: "http://upload.jianshu.io/users/upload_avatars/1420306/d083fd3309f2.jpg?imageMogr2/auto-orient/strip|imageView2/1/w/240/h/240"
 profile: 这里有片麦田，我会在这里守望.
 #twitter_username: twitter_username
-#github_username:  github_username
+github_username:  zhangxiang2014
 
 # Comment Service (Disqus or 多说)
 #  choose one and un-comment the line to active it
